[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gentlify"
version = "0.7.0"
description = "Adaptive async rate limiting for Python — closed-loop feedback control for API concurrency."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Pointmatic" },
]
keywords = ["async", "rate-limiting", "concurrency", "throttle", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pointmatic/gentlify"
Repository = "https://github.com/pointmatic/gentlify"
Issues = "https://github.com/pointmatic/gentlify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gentlify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
packages = ["gentlify"]
mypy_path = "src"

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
